package com.shf.spring.sms.task.CheckThing.check;

/**
 *  SELECT 语句检查
 */

public class SelectChecker extends Checker {
    @Override
    public String getName() {
        return "SELECT";
    }
}
